--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: The Free Wiki
 email: soimuen11@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
     Hello World! Welcome to the Free Wiki!
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "FreeWiki" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  soimuen11
 
